--- a/RemoveGiftButton/RemoveGiftButton.theme.css
+++ b/RemoveGiftButton/RemoveGiftButton.theme.css
@@ -10,3 +10,5 @@
 .buttons-3JBrkn>[aria-label]{
     display:none;
   }
+
+/** Hello there, I would like to thank you for using the Github version, the Discord one most likely outdated.
